--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   */
-  --width: 93%;
+  --width: 1280px;
 }
 
 html body {
