--- a/css/index.css
+++ b/css/index.css
@@ -3,65 +3,15 @@
 
 /* base */
 :root {
-  /*
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  color-scheme: light dark;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-  */
-  --width: 1280px;
 }
 
 html body {
-  	--navpos: fixed;
-	--rem: 11pt;
-	--font-p: 300 1em/1.6 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-	--font-h: 300 1em/1.3 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-	--font-c: 86%/1.4 monospace;
-	--ornament: "‹‹‹ ›››";
-	--border: 1px solid var(--cmed);
-	/* foreground   | background color */
-	--cfg:   #606c76; --cbg: #fff;
-	--cdark: #6c605c; --clight: #f4f5f6;
-	--cmed: #d1d1d1;
-	--clink: #9b4dca;
-	--cemph: #9b4dca; --cemphbg: #9b4dca10;
+  --width: 1280px;
 }
 
-.main {
-  padding: 1rem;
-}
-
-/* theme */
-@media (prefers-color-scheme: light) {
-  :root {
-    /*
-    --bg-color-primary: #CCCCCC;
-    --text-color-primary: #333333;
-    --link-color-primary: #333333;
-    --link-hover-color-primary: #1b1b1b;
-    --button-bg-color-primary: #f9f9f9; 
-    */
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    /*
-    --bg-color-primary: #000000;
-    --text-color-primary: #CCCCCC;
-    --link-color-primary: #CCCCCC;
-    --link-hover-color-primary: #6c6c6c;
-    */
-  }
-}
-
-
+/**/
+/*File Editor*/
+/**/
 .editor-preview-container {
 	position: relative;
 }
@@ -74,21 +24,42 @@ html body {
 	height: 100%;
 }
 
+/**/
+/*File Dropzone*/
+/**/
 .dropzone-file-input {
-    font-size: 0 !important;
-    padding: 0.3rem 0.5rem !important;
-    cursor: pointer;
+  color: transparent !important;
+  cursor: pointer;
 }
 
-.dropzone-file-input:before {
-    content: 'Choose File';
-    font-size: 1rem;
+/**/
+/*File List*/
+/**/
+.file-list {
+  &:not(:has(">*")) {
+    display: "none";
+  }
 }
 
+.file-list__item {
+  white-space: nowrap;
+}
 
+.file-list__filename {
+  border: none;
+  background: none;
+  font-weight: bold;
+  font-size: 0.9rem;
+  white-space: normal;
+  pointer-events: all;
+  color: inherit;
 
-
-
+  &:hover,
+  &:focus {
+    transform: translateX(1rem);
+    color: var(--cemph);
+  }
+}
 
 
 
