--- a/css/index.css
+++ b/css/index.css
@@ -9,35 +9,29 @@ html body {
   --width: 100%;
 }
 
-/**/
-/*File Editor*/
-/**/
+/* File Editor */
 .editor-preview-container {
-	position: relative;
+  position: relative;
 }
 
 .editor-preview-container iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-/**/
-/*File Dropzone*/
-/**/
+/* File Dropzone */
 .dropzone-file-input {
   color: transparent !important;
   cursor: pointer;
 }
 
-/**/
-/*File List*/
-/**/
+/* File List */
 .file-list {
-  &:not(:has(">*")) {
-    display: "none";
+  &:not(:has('>*')) {
+    display: 'none';
   }
 }
 
@@ -65,11 +59,22 @@ html body {
   }
 }
 
+/* Input Smart Cover */
+.input-smart-cover {
+  position: relative;
+}
 
+.input-smart-cover__btns {
+  position: absolute;
+  top: 0.3rem;
+  right: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
 
-
-
-
-
-
-
+.input-smart-cover__btn {
+  height: 1rem;
+  width: 1rem;
+  cursor: pointer;
+}
